--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang = "en">
 
 <head>
 	<title>Apple Harvest Festival</title>
@@ -11,15 +11,22 @@
 	<div id="sticky_header">
 		<div id="banner">
 			<h1>Apple Harvest Festival</h1>
-		</div>
+		</div> <!-- end of banner div -->
 		<div id="nav_bar">
 			<span class="navspan">Home</span>
 			<span class="navspan">Directory</span>
 			<span class="navspan">Gallery</span>
 			<span class="navspan">Events</span>
 			<span class="navspan">Social</span>
-		</div>
-	</div>
+		</div> <!-- end of navbar div -->
+	</div> <!-- end of stickyheader div -->
+
+<!-- temporary links for Images:
+	Banner:http://www.downtownithaca.com/local/image_files/large/57d339707c0bb.jpg
+	Facebook:http://downtownithaca.com/local/images/ad_fb.jpg
+	Twitter:http://downtownithaca.com/local/images/ad_twitter.jpg
+	Youtube:http://downtownithaca.com/local/images/ad_youtube.jpg
+	Map: http://www.downtownithaca.com/ithaca-events/Apple%20Harvest%20Festival%20Presented%20by%20Tompkins%20Trust -->
 
 	<div id="main">
 		<div id="content">
@@ -33,8 +40,8 @@
 			<h1>Directions</h1>
 				<p>Vestibulum facilisis eros a lacus commodo, sed facilisis erat malesuada. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus malesuada posuere eros, sed maximus leo tempus et. Sed at tempor nisl. Quisque nec ex in libero dapibus cursus ut in sapien. Phasellus ante velit, congue ac tortor sed, vehicula sodales elit. Suspendisse id nisi lorem. Fusce vitae neque dignissim, aliquam ex non, ultrices erat. Nulla elementum, nulla sit amet gravida malesuada, enim ipsum ullamcorper nunc, nec maximus leo quam quis nunc. Quisque fermentum felis in dignissim dignissim. In aliquet tristique massa. Quisque pretium suscipit mattis.</p>
 			<h1>Social Media</h1>
-		</div>
-	</div>
+		</div> <!-- end of content div -->
+	</div> <!-- end of main div -->
 </body>
 
 </html>
