--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 		</div> <!-- end of banner div -->
 		<div id="nav_bar">
 			<span class="navspan">Home</span>
-			<span class="navspan">Directory</span>
-			<span class="navspan">Gallery</span>
-			<span class="navspan">Events</span>
-			<span class="navspan">Social</span>
+			<span class="navspan"><a href = "vendors.html"> Vendors </a></span>
+			<span class="navspan"><a href = "events.html"> Events </a></span>
+			<span class="navspan"><a href = "gallery.html"> Gallery </a></span>
+			<span class="navspan"><a href = "transportation.html"> Transportation </a></span>
+			<span class="navspan"><a href = "contact.html"> Contact Us </a></span>
 		</div> <!-- end of navbar div -->
 	</div> <!-- end of stickyheader div -->
 
